# utility-ot-audit

./: .gitignore  README.md  SECURITY.md  gen_train_ot_tree.py  ot_tree_pipeline.py  pyproject.toml  requirements.txt  sample.csv  sample_clean.csv  tree.dot
docs/: MODELS.md  PRIORITY.md  pip-audit.txt
examples/route_optimize/: endpoints.csv  layout.json  layout_256.json
examples/security/: layout.json  sensors.csv
src/odat2/: __init__.py  audit_engine.py  cli.py  models.py  quick_rps_uncertainty.py
src/odat2/io/: csv_reader.py
src/odat2/reports/: html_report.py  json_report.py  terminal_report.py
src/odat2/telecom/: __init__.py  dxf_writer.py  layout.py  route_optimizer.py  viz.py
src/odat2/telecom/security/: __init__.py  coverage.py  io.py  models.py  viz.py
src/odat2/topology/: __init__.py  graph.py
src/odat2/validators/: __init__.py  cable_validator.py  device_validator.py  doc_confidence.py  physics_validator.py  review_priority.py  topology_validator.py  uncertainty.py
tests/: test_cli_smoke.py  test_route_optimizer.py  test_security_coverage.py  test_topology_graph.py
